# spectrum-live-studio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.rst  buildspec.json
UI/: CMakeLists.txt  basic-controls.cpp  basic-controls.hpp  log-viewer.cpp  obs-app-theming.cpp  obs-app.cpp  obs-app.hpp  platform-windows.cpp  platform-x11.cpp  spt-setting-account-view.cpp  spt-setting-account-view.hpp  spt-window-authenticate.cpp  spt-window-basic-about.cpp  spt-window-basic-about.hpp  window-basic-about.cpp  window-basic-main-profiles.cpp  window-basic-main-scene-collections.cpp  window-basic-main.cpp  window-basic-main.hpp  window-importer.cpp
UI/auth/: spt-api-services.cpp  spt-auth-manager.cpp  spt-file-downloader.cpp  spt-service-manager.cpp
UI/cmake/: feature-browserpanels.cmake  feature-importers.cmake  feature-macos-update.cmake  feature-restream.cmake  feature-sparkle.cmake  feature-twitch.cmake  feature-whatsnew.cmake  feature-youtube.cmake  os-freebsd.cmake  os-linux.cmake  os-macos.cmake  os-windows.cmake  ui-elements.cmake  ui-qt.cmake  ui-windows.cmake
UI/forms/: OBSBasicControls.ui  OBSBasicSettings.ui  SPTSettingAccountView.ui  obs.qrc
UI/update/: mac-update.cpp  shared-update.cpp
frontend/: CMakeLists.txt  OBSApp.cpp  OBSApp.hpp  OBSApp_Themes.cpp  obs-main.cpp
frontend/forms/: obs.qrc  (+5 more)
libobs/: CMakeLists.txt  obs-source.h
libobs-d3d11/: CMakeLists.txt  d3d11-shader.cpp  d3d11-subsystem.cpp
libobs-opengl/: CMakeLists.txt
src/: CMakeLists.txt
src/prism-live-studio/PRISMLiveStudio/plugins/source/prism-sticker-source/: CMakeLists.txt
(+113 files in other folders)
